<resources>
    <string name="app_name">Moments</string>
    <string name="welcome">Welcome to Moments App....!</string>
    <string name="sign">Sign Up</string>

    <!-- slid 1 -->
    <string name="slide_1_title">Chat</string>
    <string name="slide_1_desc">Private messages only for you and your partner</string>


    <!-- slid 2 -->
    <string name="slide_2_title">Timeline</string>
    <string name="slide_2_desc">Share moments with your partner in timeline</string>


    <!-- slid 3 -->
    <string name="slide_3_title">Calendar</string>
    <string name="slide_3_desc">Stay sync. for scheduled events and get auto. notifications</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_chat_fragment">Hello chat fragment</string>
    <string name="hello_timeline_fragment">Hello timeline fragment</string>
    <string name="hello_calendar_fragment">Hello calendar fragment</string>
    <string-array name="reminder_spinner_list">
        <item>one day before</item>
        <item>one month before</item>
        <item>one week before</item>

    </string-array>


    <string name="code">953095</string>
    <string name="share">share code with partner</string>
    <string name="send">Send the code to your partner to connect</string>
    <string name="enter">Enter your partner code</string>
    <string name="done">done coupling user with his partner</string>
    <string name="done_adding_calendar">Done</string>
    <string name="login">Log In</string>
    <string name="save_status">save status</string>
    <string name="sign_up">Sign up</string>
    <string name="display_name">Display name</string>
    <string name="hi">Hi..............</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_of_calendar">title</string>
    <string name="time_of_calendar">time</string>
    <string name="reminder">Reminde me</string>
    <string name="add_image">add image</string>
    <string name="send_message">send message</string>
    <string name="post">post</string>
    <string name="message_text">TextView</string>
    <string name="message_time">4/3/2018 11:45:5 AM</string>
    <string name="post_time">4/3/2018</string>
    <string name="passward">passward</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="your_status">your status</string>
    <string name="or">Or</string>
    <string name="dots">_ _ _ _ _ _</string>
    <string name="chat">Chat</string>
    <string name="timeline">Timeline</string>
    <string name="media">Media</string>
    <string name="calendar">Calendar</string>
    <string name="new_date">New Date</string>
    <string name="add_widget">add widget</string>
    <string name="enter_text">enter text</string>
    <string name="settings">settings</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="logout">logout</string>
    <string name="todo">TODO</string>
    <string name="splash">splash</string>
    <string name="heart">heart</string>
    <string name="cancelbutton">cancelbutton</string>
    <string name="donebutton">donebutton</string>
    <string name="first">first</string>
    <string name="mediaitem">mediaitem</string>
    <string name="itemimage">itemimage</string>
    <string name="item_image">item_image</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="timelineimage">timelineimage</string>


</resources>
