<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/main_group" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/timeline" />

        <item
            android:id="@+id/nav_Media"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/media" />


    </group>


    <item android:id="@+id/calendar"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/calendar">
        <menu>
            <item
                android:id="@+id/nav_new_date"
                android:icon="@android:drawable/ic_input_add"
                android:title="@string/new_date" />

        </menu>
    </item>

    <group android:id="@+id/calendar_group" android:checkableBehavior="single">

    </group>


</menu>
