<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/image3"
        android:src="@drawable/calendar4"
        android:contentDescription="@string/third" />


    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:text="@string/slide_3_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_tutorial_desc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text3"
        android:layout_centerHorizontal="true"
        android:text="@string/slide_3_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_tutorial" />
</RelativeLayout>