<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/image1"
        android:src="@drawable/chat2"
        android:contentDescription="@string/first" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:text="@string/slide_1_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_tutorial_desc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="135dp"
        android:text="@string/slide_1_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_tutorial" />
</RelativeLayout>