<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admin.moments.settings.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/image_circle"
            android:layout_height="@dimen/image_circle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_register_3"
            android:layout_marginBottom="@dimen/margin_top_register_3"
            android:src="@drawable/icon"
            android:id="@+id/circleImageView"
            >

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/display_name"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/textViewHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_register_3"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_size"
            android:text="@string/hi" />

        <Button
            android:id="@+id/buttonImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_image"
            android:contentDescription="@string/change_image"
            android:layout_marginTop="18dp"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_welcome"/>

        <Button
            android:id="@+id/buttonStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/change_status"
            android:contentDescription="@string/change_status"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_welcome"/>


</LinearLayout>
</ScrollView>