<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admin.moments.signing.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <include layout="@layout/app_bar" android:id="@+id/register_toolBar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_top_register"
        android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_register_3"
        android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_register_3"
        android:id="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textPassward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passward"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textInputLayout"
        android:layout_below="@+id/textInputLayout3"
        android:layout_marginStart="@dimen/margin_start_login"
        android:layout_marginTop="@dimen/margin_top_register_3"
        android:text="@string/create"
        android:contentDescription="@string/create"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
</ScrollView>