<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.example.admin.moments.navigation.ChatFragment">

   <android.support.v4.widget.SwipeRefreshLayout
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:id="@+id/swipeLayout"
       android:layout_above="@+id/linear">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/messages_list"
            >

        </android.support.v7.widget.RecyclerView>
   </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/PickerButton"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="match_parent"
            android:contentDescription="@string/add_image"
            android:background="@drawable/ic_add_circle_outline_black_24dp" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/enter_text" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="@dimen/margin_top_register_3"
            android:layout_gravity="bottom"
            android:background="@drawable/ic_send_black_24dp"
            android:enabled="false"
            android:contentDescription="@string/send_message"
             />



    </LinearLayout>


</RelativeLayout>
