<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.moments.navigation.CalendarFragment">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <include layout="@layout/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <include layout="@layout/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_of_calendar"
            android:drawableBottom="@drawable/bottom_line"
            android:inputType="text"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:id="@+id/dateButton"
        android:gravity="center"
        android:contentDescription="@string/time_of_calendar"
        android:background="@color/transparent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reminderSpinner"/>

</LinearLayout>

