<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admin.moments.signing.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <include layout="@layout/app_bar" android:id="@+id/login_toolBar" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/layout_width_login"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout4"
            android:layout_below="@+id/login_toolBar"
            android:layout_marginBottom="@dimen/margin_bottom_login"
            android:layout_marginTop="@dimen/margin_top_login"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/layout_width_login"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout4">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passward"
                android:inputType="textPassword"
                android:id="@+id/textPasswardLogin"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_login"
            android:layout_marginStart="@dimen/margin_start_login"
            android:layout_below="@+id/textInputLayout4"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            />

    </RelativeLayout>

</ScrollView>